--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Dev.to article on handling big data with NodeJS",
   "main": "src/main.js",
   "scripts": {
+    "start": "node src/main.js"
   },
   "author": "",
   "license": "MIT"
